control repertoire